# rust-test

./: Cargo.toml  Readme.md  Rocket.toml
.devcontainer/: Dockerfile  devcontainer.json
data/: test.db
migrations/2024-06-10-181137_create_items/: up.sql
src/: main.rs  models.rs  schema.rs
